src/theme.css
:root {
  /* Neutral */
  --color-white: #ffffff;
  --color-background: #fbfbfb;
  --color-background-base: #eceef0;
  --color-border: #e9eaeb;
  --color-border-mid: #d5d7da;
  --color-placeholder: #a4a7ae;
  --color-text-secondary: #717680;
  --color-text-primary: #0e254d;
  --color-text-dark: #002d48;
  --color-background-secondary: #E5F0F1;
  /* Brand */
  --color-primary: #2579d4;
  --color-primary-bg: #eff7ff;

  /* Status */
  --color-success: #12b76a;
  --color-success-bg: #effbf3;

  --color-warning: #f79009;
  --color-warning-text: #d87e03;
  --color-warning-bg: #fcf7f1;
  --color-warning-yellow: #f7c809;

  --color-danger: #f04438;

  --color-archived-bg: #f0f0f0;
  --color-archived-text: #717680;

  --color-highlight-blue: #f5faff;

  /* Extra */
  --color-teal: #0cb2b9;

  /* Typography */
  --font-family-primary: "Inter", sans-serif;

  /* Spacing */
  /* Spacing */
  --space-1: 4px;
  --space-2: 8px;
  --space-3: 12px;
  --space-4: 16px;
  --space-5: 20px;
  --space-6: 24px;
  --space-8: 32px;

  /* Radius */
  /* Border radius */
  --radius-sm: 4px;
  --radius-6: 6px;
  --radius-md: 8px;
  --radius-lg: 12px;
  --radius-full: 50%;

  --box-shadow:
    0px 1px 3px rgba(0, 0, 0, 0.06), 0px 1px 2px rgba(0, 0, 0, 0.04);
}

* {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: var(--font-family-primary);
  background-color: var(--color-background);
  color: var(--color-text-primary);
}

.secondary-bg-color{
  background-color: var(--color-background-secondary);
}

button:hover{
  cursor: pointer;
  background-color: #0BB3B9CC;
}
button:active{
  background-color: #039FA5;
}

button,
input,
textarea {
  font-family: inherit;
}

a {
  color: inherit;
  text-decoration: none;
}

.app-layout {
  display: flex;
  flex-direction: column;
  background-color: var(--color-background);
  height: 100vh;
}

main {
  flex: 1;
}

.icon-card {
  background-color: var(--color-white);
  max-width: 351px;
  min-height: 172px;
  display: flex;
  flex-direction: column;
  padding: var(--space-6);
  border-radius: var(--radius-md);
  box-shadow:
    0px 1px 3px rgba(0, 0, 0, 0.06),
    0px 1px 2px rgba(0, 0, 0, 0.04);
  h3 {
    margin-top: var(--space-3);
    margin-bottom: var(--space-2);
  }
  p {
    margin: 0;
  }
}

.icon-container {
  height: 40px;
  width: 40px;
  background: #f1f8f9;
  border-radius: var(--radius-sm);
  display: flex;
  align-items: center;
  justify-content: center;
  svg {
    color: var(--color-teal);
  }
}

.metric-card {
  width: 330px;
  height: 151px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: var(--space-2);
  border: 1px solid var(--color-border);
  border-radius: var(--radius-6);
  box-shadow: var(--box-shadow);
  background-color: var(--color-white);
  p {
    margin: 0;
    font-weight: bold;
  }

  .metric-value {
    font-weight: 600;
    font-size: 36px;
    color: var(--color-teal);
  }
}

form {
  max-width: 476px;
  display: flex;
  flex-direction: column;
  gap: var(--space-2);
  width: 100%;
}
label {
  font-weight: bold;
  font-size: 14px;
}

input[type="text"],
textarea {
  border-radius: var(--radius-6);
  border: 1px solid var(--color-border);
  min-height: 35px;
}

input[type="text"]::placeholder,
textarea::placeholder {
  padding-left: 14px;
  padding-top: 4px;
}

.page-header {
  max-width: 683px;
  justify-self: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 50px 0;
  p {
    color: var(--color-text-secondary);
    text-align: center;
    font-size: 14px;
    margin-bottom: 0;
    line-height: 1.7;
  }
  h1 {
    margin: 0;
    font-size: 40px;

  }
}

.icon-cards-grid{
  display: flex;
  justify-content: center;
  gap: 2rem;
}

.bring-system-container{
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-self: center;
  align-items: center;
  gap: 20px;
  max-width: 500px;
  padding: 58px 0;
  h2{
    margin: 0;
    font-size: 36px;

  }
  & > p{
    margin: 0;
    line-height: 1.5;
  }
}

.text-color-secondary{
  color: var(--color-text-secondary);

}

.modal-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 1000;
}

.modal {
  max-width: 506px;
  width: 100%;
  background-color: var(--color-white);
  padding: var(--space-6);
  border-radius: var(--radius-md);
  display: flex;
  flex-direction: column;
  gap: var(--space-4);
  h2,
  p {
    text-align: center;
    margin: 0;
  }
}

